--- a/demo2kratos/Makefile
+++ b/demo2kratos/Makefile
@@ -24,6 +24,7 @@ init:
 	go install github.com/go-kratos/kratos/cmd/protoc-gen-go-http/v2@latest
 	go install github.com/google/gnostic/cmd/protoc-gen-openapi@latest
 	go install github.com/google/wire/cmd/wire@latest
+	go install github.com/orzkratos/wire2kratos/cmd/wire2orzkratos@latest
 
 .PHONY: config
 # generate internal proto
@@ -52,6 +53,9 @@ build:
 .PHONY: generate
 # generate
 generate:
+	go mod tidy -e
+	go get github.com/google/wire/cmd/wire@latest
+	wire2orzkratos --framework=kratos
 	go generate ./...
 	go mod tidy
 
